--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.0.1"
 description = "A demo project for testing DLT"
 authors = ["Viktor Herdinai"]
 
-[project.dependencies]
+dependencies = [
+    'boto3 ~= 1.34.138'
+]
 
 [project.extras]
 dev = ["pytest", "pytest-cov", "flake8", "black", "isort", "mypy"]
