--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "A demo project for testing DLT"
 authors = ["Viktor Herdinai"]
 
 dependencies = [
-    'boto3 ~= 1.34.138'
+    'boto3 ~= 1.34.138',
+    'jinja2 ~= 3.1.4',
+    'python-dotenv ~= 1.0.1',
 ]
 
 [project.extras]
