--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,5 +28,6 @@ jobs:
       run: |
         echo "Hey from gh actions"
         databricks --version
+        echo "${{ secrets.HELLO }}"
           
     
