--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,6 +35,7 @@ jobs:
         databricks --version
         echo "$hi"
     - name: Create DAB file
+      working-directory: ./dlt_demo
       run: |
         pwd
         ls -la
