--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,6 +28,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.11"
+    - name: Install dependencies
+      run: pip install .
     - name: Install Databricks CLI 
       uses: databricks/setup-cli@main
     - name: Check something
