--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,7 +14,8 @@ permissions:
 
 env:
   DATABRICKS_HOST_NAME: "${{ secrets.DATABRICKS_HOST_NAME }}"
-  hi: "${{ secrets.HELLO }}"
+  S3_BUCKET_URI_DEV: ""
+  S3_BUCKET_URI_PRD: ""
 
 jobs:
   deploy_test:
@@ -42,6 +43,20 @@ jobs:
       env:
         DATABRICKS_TOKEN: ${{ secrets.SP_TOKEN }}
         DATABRICKS_BUNDLE_ENV: TEST
+        
+  run_test:
+    name: "Run test DLT pipeline"
+    runs-on: ubuntu-latest
+    needs:
+      - deploy_test
+    steps:
+      - uses: actions/checkout@v4
+      - uses: databricks/setup-cli@main
+      - run: databricks bundle run my-job --refresh-all
+        env:
+          DATABRICKS_TOKEN: ${{ secrets.SP_TOKEN }}
+          DATABRICKS_BUNDLE_ENV: TEST
+  
       
 
     # Download the Databricks CLI.
