--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Set up Python 3.11
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: "3.11"
         
@@ -65,7 +65,7 @@ jobs:
         working-directory: ./dlt_demo/utils
         run: python create_dab_yaml.py
         
-      - run: databricks bundle run dlt_demo_pipeline --refresh-all
+      - run: databricks bundle run dlt_demo_pipeline --refresh-all --refresh-mode full
         name: "Run test pipeline"
         env:
           DATABRICKS_TOKEN: ${{ secrets.SP_TOKEN }}
